[package]
name = "splat_derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bread42/splat_derive"
readme = "README.md"
description = "A crate providing a Splat derive macro, which generates a splat method for the struct deriving it."
keywords = ["splat", "macro", "derive"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.48", features = ["extra-traits"] }
